// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Context Filter ActiveWorkContextFilter smoke-test 1`] = `
<div class="css-view-175oi2r r-backgroundColor-78d8zt r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-width-13qz1uu"
     data-testid="work-context-filter"
>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Inbox
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-1iizze8 r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-active-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip-active"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div class="css-view-175oi2r r-alignSelf-1kihuf0 r-padding-tuq35u r-paddingLeft-1m04atk r-paddingRight-9aemit">
          <div dir="auto"
               role="img"
               tabindex="-1"
               class="css-text-146c3p1 r-backgroundColor-1niwhzg r-userSelect-lrvibr r-pointerEvents-633pao"
               style="font-size: 18px; color: rgb(29, 25, 43); transform: scaleX(1); line-height: 18px; font-family: material-community; font-weight: normal; font-style: normal;"
          >
            󰄬
          </div>
        </div>
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Urgent
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Quick Fixes
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Up Next
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Work
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Shopping
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Chalk Planning
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-flexGrow-16y2uox">
  </div>
  <div dir="auto"
       class="css-text-146c3p1 r-paddingRight-1pyaxff"
  >
    <div class="css-view-175oi2r r-display-xoduu5 r-overflow-1udh08x r-margin-crgep1 r-pointerEvents-105ug2t"
         data-testid="show-labels-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-view-175oi2r r-display-xoduu5 r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-alignItems-1awozwy r-flexGrow-16y2uox r-justifyContent-1777fci"
              data-testid="show-labels"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-textHasAncestor-1jxf684 r-backgroundColor-1niwhzg r-userSelect-lrvibr r-pointerEvents-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󱋷
        </span>
      </button>
    </div>
    <div class="css-view-175oi2r r-display-xoduu5 r-overflow-1udh08x r-margin-crgep1 r-pointerEvents-105ug2t"
         data-testid="show-completed-todos-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-view-175oi2r r-display-xoduu5 r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-alignItems-1awozwy r-flexGrow-16y2uox r-justifyContent-1777fci"
              data-testid="show-completed-todos"
              type="button"
              style="border-radius: 18px;"
      >
        <span role="img"
              tabindex="-1"
              class="css-textHasAncestor-1jxf684 r-backgroundColor-1niwhzg r-userSelect-lrvibr r-pointerEvents-633pao"
              style="font-size: 20px; color: rgb(0, 0, 0); transform: scaleX(1); line-height: 20px; font-family: material-community; font-weight: normal; font-style: normal;"
        >
          󰄱
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Work Context Filter DefaultWorkContextFilter smoke-test 1`] = `
<div class="css-view-175oi2r r-backgroundColor-78d8zt r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-width-13qz1uu"
     data-testid="work-context-filter"
>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Inbox
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Urgent
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Quick Fixes
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Up Next
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Work
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Shopping
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-borderStyle-1phboty r-flexDirection-18u37iz r-borderWidth-1yadl64 r-backgroundColor-78d8zt r-margin-1bq2mok r-pointerEvents-105ug2t"
       data-testid="chip-container"
       style="border-color: rgb(121, 116, 126); border-radius: 8px; box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px;"
  >
    <button role="button"
            tabindex="0"
            class="css-view-175oi2r r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-width-13qz1uu"
            data-testid="chip"
            type="button"
            style="border-radius: 8px;"
    >
      <div class="css-view-175oi2r r-alignItems-1awozwy r-flexDirection-18u37iz r-position-bnwqim r-paddingLeft-gy4na3"
           style="padding-right: 0px;"
      >
        <div dir="auto"
             class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-textAlign-fdjqy7 r-marginBlock-ws14 r-verticalAlign-9iso6 r-fontFamily-1x2decy r-marginBottom-15zivkp r-marginLeft-1jkjb r-marginRight-1kb76zh r-marginTop-14gqq1x r-userSelect-lrvibr"
             style="direction: ltr; color: rgb(29, 25, 43); letter-spacing: 0.1px; font-weight: 500; line-height: 20px; font-size: 14px;"
        >
          Chalk Planning
        </div>
      </div>
    </button>
  </div>
  <div class="css-view-175oi2r r-flexGrow-16y2uox">
  </div>
  <div dir="auto"
       class="css-text-146c3p1 r-paddingRight-1pyaxff"
  >
    <div class="css-view-175oi2r r-display-xoduu5 r-overflow-1udh08x r-margin-crgep1 r-pointerEvents-105ug2t"
         data-testid="show-labels-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-view-175oi2r r-display-xoduu5 r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-alignItems-1awozwy r-flexGrow-16y2uox r-justifyContent-1777fci"
              data-testid="show-labels"
              type="button"
              style="border-radius: 18px;"
      >
        <span class="css-textHasAncestor-1jxf684">
        </span>
      </button>
    </div>
    <div class="css-view-175oi2r r-display-xoduu5 r-overflow-1udh08x r-margin-crgep1 r-pointerEvents-105ug2t"
         data-testid="show-completed-todos-container"
         style="background-color: rgba(0, 0, 0, 0); width: 36px; height: 36px; border-width: 0px; border-radius: 18px; border-color: rgb(121, 116, 126);"
    >
      <button role="button"
              tabindex="0"
              class="css-view-175oi2r r-display-xoduu5 r-touchAction-1otgn73 r-cursor-1loqt21 r-position-bnwqim r-transition-ctqt5z r-overflow-1udh08x r-alignItems-1awozwy r-flexGrow-16y2uox r-justifyContent-1777fci"
              data-testid="show-completed-todos"
              type="button"
              style="border-radius: 18px;"
      >
        <span class="css-textHasAncestor-1jxf684">
        </span>
      </button>
    </div>
  </div>
</div>
`;
